# fronius-solar-to-influxdb

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
config/: sample_config.yaml
devserver/: server.py
docker/: Dockerfile
samples/: 3PInverterData.json  CommonInverterData.json  CumulationInverterData.json  MeterRealtimeData.json  MinMaxInverterData.json  PowerFlowRealtimeData.json
src/: config.py  data_processor.py  influx_bridge.py  influxdb_bridge.py
